# login-system

./: .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  SPEC.md  buildspec.yml  docker-compose.yml  pass-key.md
.github/workflows/: ci.yml
backend/: Dockerfile  dependencies.py  main.py  package-lock.json  pyproject.toml
backend/clients/: dynamodb.py
backend/models/: auth.py  passkey.py  todo.py
backend/routers/: auth.py  passkey.py  todos.py
backend/services/: auth_service.py  passkey_service.py  todo_service.py
backend/tests/: conftest.py  test_auth.py  test_passkey.py  test_todos.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: PasskeySettings.tsx  ProtectedRoute.tsx  TodoForm.tsx  TodoItem.tsx
frontend/src/contexts/: AuthContext.tsx  authContextValue.ts
frontend/src/hooks/: useAuth.ts  useTodos.ts
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  TodoPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/api-gateway/: main.tf  variables.tf
infrastructure/modules/cicd/: main.tf  outputs.tf  variables.tf
infrastructure/modules/dynamodb/: main.tf  outputs.tf
infrastructure/modules/ecr/: main.tf  outputs.tf
infrastructure/modules/frontend/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
